--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Example Project"
 authors = ["Dan Elsender <danelsender@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">3.8,<3.12"
-fastapi = "^0.92.0"
+python = ">3.8"
+fastapi = "^0.112.1"
 uvicorn = "^0.20.0"
 jinja2 = "^3.1.2"
 pydantic = "^1.10.5"
